update swagger.json
